// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeprecatedPagination > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-pagination-wrap"
  >
    <button
      aria-label="Previous"
      class="mocked-styled-3 el-deprecated-pagination-button"
      data-testid="back-button"
      role="button"
      type="button"
    >
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
        />
      </svg>
    </button>
    <div
      class="mocked-styled-1 el-deprecated-pagination-text"
    >
      <input
        aria-label="Current page number, edit to select page of 4 available"
        class="mocked-styled-2 el-deprecated-pagination-input"
        value="2"
      />
       of 4
    </div>
    <button
      aria-label="Next"
      class="mocked-styled-3 el-deprecated-pagination-button"
      data-testid="forward-button"
      role="button"
      type="button"
    >
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedPagination > should match a snapshot with start end buttons 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-pagination-wrap"
  >
    <button
      aria-label="Previous"
      class="mocked-styled-3 el-deprecated-pagination-button"
      data-testid="back-button"
      role="button"
      type="button"
    >
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
        />
      </svg>
    </button>
    <button
      aria-label="Previous"
      class="mocked-styled-3 el-deprecated-pagination-button"
      data-testid="back-button"
      role="button"
      type="button"
    >
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
        />
      </svg>
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
        />
      </svg>
    </button>
    <div
      class="mocked-styled-1 el-deprecated-pagination-text"
    >
      <input
        aria-label="Current page number, edit to select page of 4 available"
        class="mocked-styled-2 el-deprecated-pagination-input"
        value="2"
      />
       of 4
    </div>
    <button
      aria-label="Next"
      class="mocked-styled-3 el-deprecated-pagination-button"
      data-testid="back-button"
      role="button"
      type="button"
    >
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
        />
      </svg>
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
        />
      </svg>
    </button>
    <button
      aria-label="Next"
      class="mocked-styled-3 el-deprecated-pagination-button"
      data-testid="forward-button"
      role="button"
      type="button"
    >
      <svg
        class="el-icon el-deprecated-pagination-primary"
        color="inherit"
        data-size="100%"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedPaginationButton > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <button
    class="mocked-styled-3 el-deprecated-pagination-button"
    type="button"
  >
    <div>
      I am a child
    </div>
  </button>
</DocumentFragment>
`;

exports[`DeprecatedPaginationText > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-deprecated-pagination-text"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedPaginationWrap > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-pagination-wrap"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;
